--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 streamlit 
 boto3
 langchain
-youtube-transcript-api
+langchain-core
+langchain-community
+youtube-transcript-api==1.1.0
 langchain-aws
+requests
